--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,21 @@
 <body>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+  <nav id = "top-bar" data-topbar role="navigation">
+     <ul class = "menu">
+      <li>
+        <div class="sign-in inline-block">
+          <% if user_signed_in? %>
+            <li><%= link_to "Log Off", destroy_user_session_path, method: :get %></li>
+            <li><%= link_to "My Account", user_path(current_user) %></li>
+          <% else %>
+            <li><%= link_to "Sign Up", new_user_registration_path %></li>
+            <li><%= link_to "Log In", new_user_session_path %></li>
+          <% end %>
+        </div>
+      </li>
+    </ul>
+  </nav>
 
 <%= yield %>
 
