--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <li>
         <div class="sign-in inline-block">
           <% if user_signed_in? %>
-            <li><%= link_to "Log Off", destroy_user_session_path, method: :get %></li>
+            <li><%= link_to "Log Off", destroy_user_session_path %></li>
             <li><%= link_to "My Account", user_path(current_user) %></li>
           <% else %>
             <li><%= link_to "Sign Up", new_user_registration_path %></li>
