--- a/app/views/portfolios/show.erb
+++ b/app/views/portfolios/show.erb
@@ -11,13 +11,21 @@
   <% total = 0 %>
   <% @portfolio.holdings.each do |holding| %>
     <tr>
-      <td><%= holding.symbol %></td>
+      <td><%= link_to holding.symbol, holding %></td>
       <td><%= holding.number_shares %></td>
-      <td><%= holding.purchase_price %></td>
-      <td><%= holding.number_shares * holding.purchase_price %></td>
-      <% total += holding.number_shares * holding.purchase_price %>
+      <td><%= holding.price_close %></td>
+      <td><%= holding.number_shares * holding.price_close %></td>
+      <% total += holding.number_shares * holding.price_close %>
     </tr>
   <% end %>
+
+  <tr>
+    <td>Cash</td>
+    <td> </td>
+    <td> </td>
+    <td><%= @portfolio.cash %></td>
+    <% total += @portfolio.cash %>
+  </tr>
 
   <tr>
     <td> </td>
