portfolio grading WIP

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 // @import "*";
 @import "portfolio_show";
 @import "holding_show";
+@import "portfolio_index";
 
 #body {
   background-color: lightgreen;
@@ -16,6 +17,12 @@
 ul {
   list-style: none;
 }
+#page-body {
+  padding-bottom: 10px;
+  padding-top: 0px;
+  margin: 40px;
+  margin-top: 20px;
+}
 #top-bar {
   background-color: lightblue;
   margin: 0px;
@@ -23,6 +30,7 @@ ul {
   h1 {
     font-family: Comic Sans MS;
     color: #6530E5;
+    text-align: center;
   }
 }
 .sign-in {
@@ -36,18 +44,21 @@ ul {
   margin: 0px;
   font-size: .8em;
 }
-#page-body {
-  margin: 40px;
-}
 .red {
-  background-color: red;
-  color: red;
+  background-color: #ff4444;
+  color: #ff4444;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
 .yellow {
   background-color: yellow;
   color: yellow;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
 .green {
-  background-color: green;
-  color: green;
+  background-color: #00C851;
+  color: #00C851;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
