--- a/app/assets/stylesheets/portfolio_show.scss
+++ b/app/assets/stylesheets/portfolio_show.scss
@@ -87,3 +87,19 @@ table {
   margin-top: 2px;
   margin-bottom: 15px;
 }
+#stockCarousel {
+  margin-bottom: 20px;
+}
+#portfolio-stocks {
+  border-top: 1px solid grey;
+  margin-bottom: 15px;
+  text-align: center;
+}
+#portfolio-stock-symbol {
+  margin-top: 10px;
+  text-align: center;
+}
+#portfolio-stock-message {
+  text-align: center;
+  margin-bottom: 10px;
+}
