--- a/app/assets/stylesheets/portfolio_show.scss
+++ b/app/assets/stylesheets/portfolio_show.scss
@@ -74,32 +74,10 @@ table {
   margin-left: 0px;
   background-color: white;
 }
-#portfolio-chill-group {
-  border-top: 1px solid grey;
-  margin-top: -8px;
-  padding-top: 30px;
+#portfolio-links-row {
+  display: flex;
+  justify-content: space-between;
 }
-#portfolio_chill_message {
-  text-align: center;
-}
-#portfolio-grade-title {
-  text-align: center;
-  margin-top: 2px;
-  margin-bottom: 15px;
-}
-#stockCarousel {
-  margin-bottom: 20px;
-}
-#portfolio-stocks {
-  border-top: 1px solid grey;
-  margin-bottom: 15px;
-  text-align: center;
-}
-#portfolio-stock-symbol {
-  margin-top: 10px;
-  text-align: center;
-}
-#portfolio-stock-message {
-  text-align: center;
-  margin-bottom: 10px;
+#grade-portfolio-link {
+  margin-top: 8px;
 }
