--- a/app/assets/stylesheets/portfolio_index.scss
+++ b/app/assets/stylesheets/portfolio_index.scss
@@ -3,8 +3,15 @@
   text-align: center;
   display:block;
   margin: auto;
+  color: #3277C5;
 }
 .add-portfolio {
+  display: block;
+  margin: auto;
+  color: #3277C5;
+}
+#index-title {
+  text-align: center;
   display: block;
   margin: auto;
 }
