--- a/app/assets/stylesheets/portfolio_show.scss
+++ b/app/assets/stylesheets/portfolio_show.scss
@@ -8,6 +8,8 @@ table {
   th, td {
     border: 1px solid gray;
     padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 #portfolio_title_show {
@@ -51,7 +53,6 @@ table {
 }
 .portfolio-button {
   background-color: white;
-  color: #337ab7;
   display: inline-block;
   margin: auto;
   margin-top: 0px;
@@ -60,6 +61,9 @@ table {
   border-radius: 5px;
   border: none;
   height: 35px;
+}
+.purple-link {
+  color: #3277C5;
 }
 #add-button {
   width: 75px;
